# inference-engine

./: CMakeLists.txt  Dockerfile  README.md
include/: CMakeLists.txt
include/core/: tensor.hpp  types.hpp
include/graph/: sequential.hpp
include/io/: model_loader.hpp
include/ops/: linear.hpp  operator_base.hpp  relu.hpp
src/: CMakeLists.txt
src/core/: tensor.cpp
src/graph/: sequential.cpp
src/io/: model_loader.cpp
src/ops/: linear.cpp  relu.cpp
tests/: CMakeLists.txt  test_graph_sequential.cpp  test_io_model_loader.cpp  test_ops_linear.cpp  test_ops_relu.cpp  test_tensor.cpp
